--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "type": "module",
   "dependencies": {
-    "d3": "^7.8.5"
+    "d3": "^7.8.5",
+    "svelte-vertical-timeline": "^1.0.0"
   }
 }
