--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@sveltejs/svelte-scroller": "^2.0.7",
     "d3": "^7.8.5",
+    "svelte-inview": "^4.0.2",
     "svelte-vertical-timeline": "^1.0.0"
   }
 }
